Fixed list alignment for Paragraph with image container

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -4588,6 +4588,14 @@
 		padding: 2em;
 		min-height: 400px;
 	}
+	#article .left ~ ul li,
+	#article .right ~ ul li {
+		position: relative;
+    	left: 5px;
+	}
+	#article .left ~ ul li {
+		padding-left: 0;
+	}
 
 	#form input[type="reset"].alt {
 		color: rgba(144, 144, 144, .5) !important;
@@ -4662,5 +4670,8 @@
 		}
 		.row > * {
 			padding: 2em;
+		}
+		#article .left ~ ul li {
+	    	left: 20px;
 		}
 	}
